refactor: move functionality out of ResourceConfiguration
Signed-off-by: Chris Laprun <claprun@redhat.com>